[gd_scene load_steps=7 format=2]

[ext_resource path="res://games/scrap_road/assets/Car.png" type="Texture" id=1]
[ext_resource path="res://games/scrap_road/scripts/Car.gd" type="Script" id=2]
[ext_resource path="res://games/scrap_road/assets/CarWindows.png" type="Texture" id=3]
[ext_resource path="res://games/scrap_road/assets/sfx/Boss hit 1.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22.2999, 24.0631 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 22.0685, 25.815 )

[node name="Car" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
z_index = -15
script = ExtResource( 2 )
h_speed = 10
up_speed = 0.4
break_speed = 4
rotation_speed = 30
crash_speed = 8
crash_mode_cooldown = 0.3

[node name="WindowsSprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
z_index = 1
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -2 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="DustParticles" type="Node" parent="."]

[node name="CollsionAudioSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
